# reportabug

./: LICENSE  README.md  azure-pipelines-test.yml  azure-pipelines.yml  conftest.py  setup.cfg  setup.py
src/: example.py  reportabug.py
src/reportabug/: __init__.py  __main__.py
tests/: test_basic.py
