[metadata]
name = reportabug
author = Steve Dower
author_email = steve.dower@python.org
url = https://github.com/zooba/reportabug
license_file = LICENSE
description = "A Python tool for collecting information when reporting bugs."
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = True
python_requires = >=3.6
